Redirect API finalized (hopefully) & documentation
